.opsera-voting-app/k8s/base/db-service.yaml
# ╔══════════════════════════════════════════════════════════════════════════════╗
# ║  PostgreSQL Service                                                          ║
# ╚══════════════════════════════════════════════════════════════════════════════╝

apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    app.kubernetes.io/name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: db
