.opsera-voting-app/k8s/base/redis-service.yaml
# ╔══════════════════════════════════════════════════════════════════════════════╗
# ║  Redis Service                                                               ║
# ╚══════════════════════════════════════════════════════════════════════════════╝

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis
